# DataStructures

./: .gitignore
datastructures/: CMakeLists.txt
datastructures/include/: list.h  predef.h  stack.h
datastructures/list/: CMakeLists.txt
datastructures/list/include/: list.h
datastructures/list/src/: list.c
datastructures/src/: queue.c
include/: queue.h
src/: list.c  stack.c
